fixed map marker icons visibility

--- a/src/x-snc-gmap/styles.scss
+++ b/src/x-snc-gmap/styles.scss
@@ -1,15 +1,54 @@
-.map-container {
-    display: flex;
-    border: 2px solid;
-    position: fixed !important; 
+@import '@servicenow/sass-kit/host';
+@import '@servicenow/sass-global/index';
+
+
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+#map {
+  height: 100%;
+}
+
+  .map-container {
+    position: relative;
     height: 100% !important;
     width: 100% !important;
-  }
+    border: 2px solid red;
+}
 
-  .map {
-    width: 100%;
-    height: 100%;
-  }
+.map-container_OLD {
+  display: flex;
+  border: 2px solid;
+  position: fixed !important;
+  height: 100% !important;
+  width: 100% !important;
+}
+/*
+.map {
+  width: 100%;
+  height: 100%;
+}
+*/
+/* workaround for close button in Info box not showing up */
+.gm-ui-hover-effect {
+  opacity: .6
+}
 
-  /* workaround for close button in Info box not showing up */
-  .gm-ui-hover-effect{opacity:.6}.gm-ui-hover-effect:hover{opacity:1}.gm-ui-hover-effect>span{background-color:#000}@media (forced-colors:active),(prefers-contrast:more){.gm-ui-hover-effect>span{background-color:ButtonText}}
+.gm-ui-hover-effect:hover {
+  opacity: 1
+}
+
+.gm-ui-hover-effect>span {
+  background-color: #000
+}
+
+@media (forced-colors:active),
+(prefers-contrast:more) {
+  .gm-ui-hover-effect>span {
+    background-color: ButtonText
+  }
+}
